--- a/style.css
+++ b/style.css
@@ -31,3 +31,29 @@ body {
     font-size: 6lvh;
     text-align: center;
 }
+
+header{
+    text-align: center;
+}
+
+nav ul{
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li{
+    display: inline;
+    margin-right: 25px;
+}
+
+nav ul li a{
+    font-size: large;
+    color: black;
+    text-decoration: none;
+    padding: 5px;
+}
+
+nav ul li a:hover {
+    color: gray;
+    text-decoration: overline;
+}
