--- a/style.css
+++ b/style.css
@@ -29,9 +29,17 @@
     margin: 0;
     padding: 0;
 }
-
+html{
+    height: 100%;
+    box-sizing: border-box;
+}
 body {
     background-color: var(--clr-light);
+    position: relative;
+    margin: 0;
+    min-height: 100%;
+    padding-bottom: 200px;
+    box-sizing: inherit;
 }
 
 .title {
@@ -138,9 +146,10 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
+    height: 140px;
 }
 
 .footer-content {
@@ -148,6 +157,10 @@ footer {
     justify-content: center;
     margin: 5px;
     padding: 5px;
+}
+
+.footer-title{
+    font-size: 25px;
 }
 
 .footer-ul, .li-2 {
