--- a/style.css
+++ b/style.css
@@ -136,6 +136,43 @@ h3.title-2 {
     margin-left: 25px;
 }
 
+form {
+    border-radius: 5px;
+    box-shadow: 5px 10px 18px #888;
+    padding: 50px;
+    text-align: left-center;
+    margin: 10px;
+}
+
+input[type=text],textarea {
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: Verdana,Geneva,Tahoma,sans-serif;
+    font-size: 15px;
+    margin: 5px 0 20px;
+    padding: 10px;
+    width: 100%
+}
+
+.error {
+    color: red;
+    font-size: .9em;
+    padding: -5px
+}
+
+.submit-btn{
+    width: 100px;
+    border-radius: 5px;
+    font-size: 15px;
+    height: 25px;
+    background-color: #cbeef3;
+}
+
+.submit-btn:hover {
+    background-color: #6ea4bf;
+}
+
 footer {
     background-image: radial-gradient(#6ea4bf, #cbeef3);
     color: white;
