--- a/style.css
+++ b/style.css
@@ -102,8 +102,12 @@ nav ul li {
 }
 
 .main-body-div {
+    color: white;
     display: flex;
     justify-content: center;
+    background-image: url("homepage-img.png");
+    background-size: cover;
+    background-position: center;
 }
 
 .main-welcome {
