--- a/style.css
+++ b/style.css
@@ -140,6 +140,51 @@ h3.title-2 {
     margin-left: 25px;
 }
 
+.slideshow-container{
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+    background-color: #1f5673;
+    border-radius: 5px;
+}
+.mySlides {
+    display: none;
+    width: 100%;
+    height: 500px;
+    object-fit: contain;
+  }
+
+.mySlides:first-child {
+    display: block;
+}
+
+
+.dots-container {
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+}
+
+.dot{
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    cursor: pointer;
+}
+
+.dot-active {
+    background-color: white;
+}
+
+.dot:hover {
+    background-color: white;
+}
+
 form {
     border-radius: 5px;
     box-shadow: 5px 10px 18px #888;
